--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -121,6 +121,14 @@
 
             </LinearLayout>
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Move Marker"
+                android:textSize="20sp"
+                android:textColor="@color/appBlue"
+                android:onClick="toggleEditableMarker"/>
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
