--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -106,6 +106,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Location"
+                    android:id="@+id/mapHeaderTextEditLocation"
                     style="@style/ContentHeader"/>
 
                 <View
