--- a/app/src/main/res/layout/view_location.xml
+++ b/app/src/main/res/layout/view_location.xml
@@ -4,11 +4,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:textColor="#ffffffff"
+        android:background="#ffff0000"
+        android:textSize="20sp"
+        android:layout_marginBottom="10dp"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginTop="10dp"
+        android:onClick="deleteLocation"
+        android:id="@+id/deleteButtonViewLocation"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:id="@+id/mainInfo">
+        android:id="@+id/mainInfo"
+        android:layout_above="@id/deleteButtonViewLocation"
+        android:layout_alignParentTop="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -258,16 +274,6 @@
 
         </LinearLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        android:textColor="#ffffffff"
-        android:background="#ffff0000"
-        android:textSize="20sp"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
-        android:onClick="deleteLocation"/>
+
 
 </RelativeLayout>
