Initial stuff for draggable marker
Not working. (but doesn't crash)

--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -128,6 +128,7 @@
                 android:text="Move Marker"
                 android:textSize="20sp"
                 android:textColor="@color/appBlue"
+                android:id="@+id/moveMarkerText"
                 android:onClick="toggleEditableMarker"/>
 
             <RelativeLayout
