--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bookmarks"
+            android:text="My Spots"
             android:textSize="30sp"
             android:textColor="#ffffffff"
             android:paddingRight="30dp"/>
@@ -24,15 +24,6 @@
             android:layout_width="50dp"
             android:layout_height="40dp"
             android:layout_alignParentRight="true"
-            android:id="@+id/addCurrentLocationButton"
-            android:src="@drawable/current_location"
-            android:background="#00000000"
-            android:onClick="addCurrentLocation"/>
-
-        <ImageButton
-            android:layout_width="50dp"
-            android:layout_height="40dp"
-            android:layout_toLeftOf="@id/addCurrentLocationButton"
             android:src="@drawable/new_location"
             android:background="#00000000"
             android:paddingRight="10dp"
