--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -65,7 +65,7 @@
                 android:textColor="@color/appBlue"
                 android:textSize="20sp"
                 android:id="@+id/locationNameEditLocation"
-                android:inputType="textMultiLine|textCapSentences|textAutoComplete|textAutoCorrect"/>
+                android:inputType="textCapSentences|textAutoComplete|textAutoCorrect" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -91,7 +91,7 @@
                     android:textColor="@color/appBlue"
                     android:textSize="20sp"
                     android:id="@+id/locationAddressEditLocation"
-                    android:inputType="textMultiLine|textCapSentences|textAutoComplete|textPostalAddress|textAutoCorrect"/>
+                    android:inputType="textCapSentences|textAutoComplete|textPostalAddress|textAutoCorrect"/>
 
             </LinearLayout>
 
@@ -115,20 +115,23 @@
                         style="@style/ContentHeader"/>
 
                     <ImageButton
-                        android:layout_width="50dp"
-                        android:layout_height="40dp"
-                        android:src="@drawable/refresh_icon"
+                        android:layout_width="40dp"
+                        android:layout_height="35dp"
+                        android:src="@drawable/refresh_icon2"
                         android:onClick="refreshMap"
                         android:background="#00000000"
+                        android:layout_alignParentBottom="true"
                         android:layout_toRightOf="@id/mapHeaderTextEditLocation" />
 
                     <ImageButton
-                        android:layout_width="50dp"
-                        android:layout_height="40dp"
+                        android:layout_width="40dp"
+                        android:layout_height="35dp"
                         android:layout_alignParentRight="true"
-                        android:src="@drawable/current_location"
+                        android:src="@drawable/current_location2"
                         android:background="#00000000"
+                        android:scaleType="fitXY"
                         android:paddingRight="10dp"
+                        android:layout_alignParentBottom="true"
                         android:onClick="useCurrentLocation"/>
 
                 </RelativeLayout>
@@ -140,7 +143,7 @@
 
                 <fragment
                     android:layout_width="match_parent"
-                    android:layout_height="160dp"
+                    android:layout_height="240dp"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:id="@+id/mapFragment"/>
 
