--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="My Spots"
+            android:text="My Locations"
             android:textSize="30sp"
             android:textColor="#ffffffff"
             android:paddingRight="30dp"/>
