--- a/app/src/main/res/layout/edit_location.xml
+++ b/app/src/main/res/layout/edit_location.xml
@@ -39,7 +39,8 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/titleBarEditLocation">
+        android:layout_below="@id/titleBarEditLocation"
+        android:id="@+id/mainLocationInfo">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -100,7 +101,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 android:id="@+id/mapView"
-                android:visibility="visible">
+                android:visibility="visible"
+                android:layout_alignParentBottom="true">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -120,7 +122,7 @@
                         android:src="@drawable/refresh_icon2"
                         android:onClick="refreshMap"
                         android:background="#00000000"
-                        android:layout_alignParentBottom="true"
+                        android:layout_marginTop="5dp"
                         android:layout_toRightOf="@id/mapHeaderTextEditLocation" />
 
                     <ImageButton
@@ -130,8 +132,8 @@
                         android:src="@drawable/current_location2"
                         android:background="#00000000"
                         android:scaleType="fitXY"
+                        android:layout_marginTop="5dp"
                         android:paddingRight="10dp"
-                        android:layout_alignParentBottom="true"
                         android:onClick="useCurrentLocation"/>
 
                 </RelativeLayout>
@@ -141,11 +143,25 @@
                     android:layout_height="2dp"
                     android:background="@color/appOrange"/>
 
-                <fragment
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="240dp"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
-                    android:id="@+id/mapFragment"/>
+                    android:layout_height="240dp">
+
+                    <fragment
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:name="com.google.android.gms.maps.SupportMapFragment"
+                        android:id="@+id/mapFragment"/>
+
+                    <ImageView
+                        android:id="@+id/transparent_image"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="#00000000" />
+
+                    </RelativeLayout>
+
+
 
             </LinearLayout>
 
@@ -268,6 +284,7 @@
 
             </RelativeLayout>
 
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -331,5 +348,7 @@
             </LinearLayout>
 
         </ScrollView>
+
+
 
     </RelativeLayout>
