Minor changes. Basically everything works
Whoooooooo!

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="colorPrimaryDark">#282828</color>
     <color name="colorPrimary">#ff26b9ff</color>
     <color name="colorAccent">#ffff9436</color>
+
+    <color name="red">#ff5555</color>
 </resources>
